--- a/code/src/pages/dashboard.css
+++ b/code/src/pages/dashboard.css
@@ -61,11 +61,19 @@
     z-index: 1;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+.nav-link {
     display: block;
+    padding: 5px 5px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.nav-link:not(:last-child) {
+    border-bottom: 5px solid darkblue;
+}
+
+.nav-link:hover {
+    background-color: paleturquoise;
 }
 
 .dropdown:hover .dropdown-content {
@@ -122,9 +130,9 @@
 }
 
 .recommendation-box {
-    width: 20%; /* Adjust as needed */
+    width: 15%;
     border: 1px solid beige;
-    margin-left: 1450px;
+    margin-left: 1500px;
     padding: 10px;
     margin-top: 20px;
     color: antiquewhite;
@@ -133,9 +141,8 @@
 }
 
 .song-button {
-    padding: 10px 20px;
-    margin-top: 10px;
-    margin-left: 1600px;
+    padding: 10px;
+    margin-left: 1580px;
     background-color: darkgreen;
     color: cyan;
     border: 5px solid cyan;
