--- a/code/src/pages/entries.css
+++ b/code/src/pages/entries.css
@@ -1,8 +1,85 @@
-/* .container {
+.navbar {
+    position: relative;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-}   */
+    background-color: cyan;
+    padding: 60px;
+}
+
+.navbar-content {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.app-name {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-weight: bold;
+    font-size: xx-large;
+    color: black;
+}
+
+.nav-items {
+    position: absolute;
+    left: 85%;
+    transform: translateX(-50%);
+    font-size: x-large;
+    color:black;
+    text-decoration: none;
+}
+
+.dropdown {
+    position: absolute;
+    right: 2%;
+    font-size: x-large;
+    color: black;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.dropbtn {
+    background-color: black;
+    color: cyan;
+    padding: 40%;
+    font-size: x-large;
+    cursor: pointer;
+    border: 5px solid white;
+    border-radius: 8px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav-link {
+    display: block;
+    padding: 5px 5px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.nav-link:not(:last-child) {
+    border-bottom: 5px solid darkblue;
+}
+
+.nav-link:hover {
+    background-color: paleturquoise;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    text-align: left;
+}
 
 body {
     background-color: black;
