--- a/code/src/pages/dashboard.css
+++ b/code/src/pages/dashboard.css
@@ -149,3 +149,14 @@
     cursor: pointer;
     border-radius: 8px;
 }
+
+.center-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    flex-direction: column;
+    text-align: center;
+    color: gold;
+    font-size: xx-large;
+}
