--- a/code/src/pages/dashboard.css
+++ b/code/src/pages/dashboard.css
@@ -112,11 +112,18 @@
     border-radius: 8px;
 }
 
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
 .save-button {
     padding: 10px 20px;
     margin-top: 10px;
     border: 5px solid cyan;
     border-radius: 8px;
+    margin-left: 50px;
 }
 
 
